# stockshot-browser

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.kilocode/rules/memory_bank/: brief.md  session_progress.md
specifications/: architecture_overview.md  development_roadmap.md  project_summary.md  technical_specification.md
src/stockshot_browser/: __init__.py  main.py
src/stockshot_browser/config/: __init__.py  defaults.py  manager.py  schemas.py
src/stockshot_browser/core/: __init__.py  application.py  color_manager.py  context_manager.py  entity_manager.py  metadata_exporter.py  metadata_manager.py  multi_entity_manager.py  multi_metadata_manager.py  multi_thumbnail_manager.py  path_context_manager.py  thumbnail_manager.py
src/stockshot_browser/database/: __init__.py  connection.py  migrations.py  models.py  multi_database_manager.py
src/stockshot_browser/looks/qt_material/: __init__.py
src/stockshot_browser/ui/: __init__.py  color_settings_widget.py  context_menu.py  directory_tree.py  drag_drop_mixin.py  export_dialog.py  main_window.py  metadata_viewer.py  multi_content_view.py  search_widget.py  tabbed_navigation.py  tag_dialog.py  theme_utils.py
src/stockshot_browser/utils/: __init__.py  ffmpeg_utils.py  file_utils.py  sequence_detector.py
tests/: __init__.py  test_config.py
